--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,9 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+.inside #maincontent {
+  padding-top: 80px;
+}
 /*.inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 80vh;
@@ -324,7 +327,7 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 30px 40px 30px;
   width: 100%;
 }
 #reviews-container {
